@@ -24,26 +24,16 @@ docs
 dist
 build
 
-# Classic protocol connector (aka mysql)
-mysql-connector-python/build/
-mysql-connector-python/dist/
-mysql-connector-python/docs/INFO_BIN
-mysql-connector-python/docs/INFO_SRC
-mysql-connector-python/lib/mysql/vendor/
-mysql-connector-python/tests_*.log
-mysql-connector-python/README.txt
-mysql-connector-python/README.rst
-mysql-connector-python/LICENSE.txt
-mysql-connector-python/CHANGES.txt
-
-# X protocol connector (aka XDevAPI or mysqlx)
-mysqlx-connector-python/build/
-mysqlx-connector-python/dist/
-mysqlx-connector-python/docs/INFO_BIN
-mysqlx-connector-python/docs/INFO_SRC
-mysqlx-connector-python/src/mysqlxpb/mysqlx/mysqlx*
-mysqlx-connector-python/README.txt
-mysqlx-connector-python/README.rst
-mysqlx-connector-python/LICENSE.txt
-mysqlx-connector-python/CHANGES.txt
-
+# Classic/XDevAPI protocol connector (aka mysql)
+mysql*-connector-python/build/
+mysql*-connector-python/dist/
+mysql*-connector-python/docs/INFO_BIN
+mysql*-connector-python/docs/INFO_SRC
+mysql*-connector-python/lib/mysql/vendor/
+mysql*-connector-python/tests_*.log
+mysql*-connector-python/README.txt
+mysql*-connector-python/README.rst
+mysql*-connector-python/LICENSE.txt
+mysql*-connector-python/CHANGES.txt
+mysql*-connector-python/CONTRIBUTING.md
+mysql*-connector-python/SECURITY.md
